Aggiunta evidenziazione elementi spostati

--- a/css/forms.css
+++ b/css/forms.css
@@ -928,7 +928,13 @@ body:not(.smart) .stampaBtn{
 	margin-right: 2px;
 	margin-left: 1px;
 }
-
+.grabed{
+	opacity: 0.5 !important;
+	background-color: rgba(92,173,243,0.5) !important;
+}
+.eviPunto{
+	box-shadow: 0px 0px 3px #186ab1 !important;
+}
 .grabElement{
 	display:block;
 }
@@ -1050,6 +1056,10 @@ body:not(.smart) .stampaBtn{
 }
 .aggiunti{
 	box-shadow: 0px 0px 3px #93C !important;
+}
+.rgProcMod{
+	-webkit-transition: box-shadow 0.5s;
+	transition: box-shadow 0.5s;
 }
 #dettagliCont .rgProcMod{ /* procedura */
 	margin-bottom: 5px;
