--- a/css/forms.css
+++ b/css/forms.css
@@ -548,7 +548,7 @@ body:not(.smart) .stampaBtn{
 	border-radius:12px;
 	height:24px;
 	line-height:24px !important;
-	padding-left:10px;
+	padding-left:5px;
 	padding-right:10px;
 	margin:7px;
 	box-shadow:0px 0px 2px rgba(0,0,0,0.4);
@@ -934,6 +934,11 @@ body:not(.smart) .stampaBtn{
 }
 .eviPunto{
 	box-shadow: 0px 0px 3px #186ab1 !important;
+}
+.eviCiclo{
+	box-shadow: 0px 0px 5px #186ab1,
+				0px 0px 4px #186ab1,
+				0px 0px 3px #186ab1 !important;
 }
 .grabElement{
 	display:block;
