--- a/sets/meridiani_shiatsu/stili_tsubo.css
+++ b/sets/meridiani_shiatsu/stili_tsubo.css
@@ -2,6 +2,51 @@
 /* CSS Document */
 
 
+#patologieTsubo{
+	margin-top:13px;
+	margin-bottom:13px;
+    margin-right: -13px;
+}
+#patologieTsubo:not(.vis){
+	overflow:hidden;
+	height:30px;
+	margin-bottom: 20px;
+    background-color: rgba(255,255,255,0.6);
+    border-radius: 15px;
+    padding-left: 13px;
+    margin-left: -13px;
+}
+#patologieTsubo div:first-child{
+	height:30px;
+	line-height:30px;
+	font-weight:bold;
+	margin-bottom:4px;
+	cursor:pointer;
+	background-image:url(../../img/frGiuB.png);
+	background-position:right center;
+	background-repeat:no-repeat;
+	background-size: auto 40px;
+}
+#patologieTsubo.vis div:first-child{
+	background-image:url(../../img/frSuB.png) !important;
+}
+#patologieTsubo p{
+	margin-top:4px;
+	margin-bottom:4px;
+	cursor:pointer;
+}
+#patologieTsubo span{
+	display:inline-block;
+	line-height:20px;
+	height:22px;
+	background-color:rgba(0,0,0,0.1);
+	border-radius:11px;
+	padding: 0px 10px;
+}
+#patologieTsubo span:hover{
+	background-color:rgba(0,0,0,0.2) !important;
+}
+
 #spSch, #spStesso{
     display: inline-block;
     color: #fff;
