--- a/css/modulo_pazienti.css
+++ b/css/modulo_pazienti.css
@@ -1106,7 +1106,8 @@ body:not(.smart) .listaProcedure{
 	margin-bottom:0px !important;
 }
 
-body:not(.smart) #modAnag{
+body:not(.smart) #modAnag,
+body:not(.smart) #modProc{
 	background-color:rgba(0,51,159,0.1);
 	border-radius:3px;
 	height:32px;
@@ -1119,10 +1120,15 @@ body:not(.smart) #modAnag{
 	color:rgba(0,0,0,0.7);
 	cursor:pointer;
 	display:inline-block;
+	margin-bottom: 10px;
+}
+body:not(.smart) #modAnag{
 	float:right;
 	margin-top:-10px;
 	margin-right:20px;
-	margin-bottom: 10px;
+}
+body:not(.smart) #modProc{
+	vertical-align:middle;
 }
 .smart #modAnag{
     position: fixed;
