--- a/css/forms.css
+++ b/css/forms.css
@@ -1165,18 +1165,8 @@ body:not(.smart) .stampaBtn{
 	color:#000;
 	display: block;
 }
-.iProc{
-	float: left;
-	padding-right: 0px !important;
-}
-.smart .iProc{
-	margin-top: 13px !important;
-}
-body:not(.smart) .iProc{
-	margin-top: 8px !important;
-	margin-bottom: 12px !important;
-}
-#scheda:not(.sch_Max600) #formMod i:not(.iProc){  /* PAZIENTI */
+
+#scheda:not(.sch_Max600) #formMod i{  /* PAZIENTI */
 	margin-bottom: -29px;
 	width: 100px;
     text-overflow: ellipsis;
@@ -1476,8 +1466,8 @@ body:not(.smart) #scheda:not(.scheda_procedura) .dettMeridiano span:not(.valPunt
 	cursor:default !important;
 }
 #dettagliCont .dettMeridiano{ /* procedura */
-	padding-left:20px !important;
-	background:url(../img/lineaPat.png) no-repeat 6px center;
+	padding-left:34px !important;
+	background:url(../img/lineaPat.png) no-repeat 10px center;
 }
 #scheda .p_fuoco_supplementare span{
 	color:#FFF !important;
@@ -1748,7 +1738,7 @@ body:not(.touch) #puntiAuriculoMap .dettPunto:hover{
 }
 .selectTratt{
 	width:33px;
-	padding-left: 3px !important;
+	padding-left: 7px !important;
     padding-right: 7px !important;
 }
 .scoreSelect{
@@ -1784,15 +1774,15 @@ body:not(.touch) #puntiAuriculoMap .dettPunto:hover{
 }
 .ptNo{
 	display: inline-block;
-    margin-top: 3px;
+    /*margin-top: 3px;
     margin-bottom: 3px;
-    margin-right: 32px;
+    margin-right: 32px;*/
     height: 30px;
     line-height: 30px;
     vertical-align: middle;
     padding-left: 7px;
     padding-right: 7px;
-    width: 89px;
+    /*width: 89px;*/
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
