--- a/css/modulo_pazienti.css
+++ b/css/modulo_pazienti.css
@@ -1671,7 +1671,12 @@ body:not(.smart) #rgApplicaFiltri{
 	overflow:hidden;
 }
 #tt_mezzival2{
-	margin-top: -3px !important;
+	margin-top: -3px;
+}
+#contImpset #tt_mezzival2{
+	margin-top: 12px !important;
+    width: 228px;
+    margin: 0 auto;
 }
 .mzSel{
 	background-color:#8db0ee;
