--- a/css/popup_impset.css
+++ b/css/popup_impset.css
@@ -4,9 +4,9 @@
 /* IMPOSTAZIONIE DEL SET */
 #impset{
 	width: 400px;
-    height: 460px;
+    height: 490px;
     margin-left: -200px;
-    margin-top: -230px;
+    margin-top: -245px;
 }
 #labelImpset{
 	background-image:url(../img/ico_coloriN.png);
@@ -31,4 +31,7 @@
 	border:none;
 	box-shadow:0px 0px 3px rgba(0,0,0,0.5);
 	cursor:pointer;
+}
+#contImpset p:first-child{
+	margin-top:0px;
 }
