--- a/sets/auricologia/stili.css
+++ b/sets/auricologia/stili.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
 
+#impset{
+    height: 230px;
+    margin-top: -115px;
+}
+
 #pulsante_modello{
 	background-image: url(../auricologia/img/logoMenuN.png) !important;
     background-repeat: no-repeat !important;
