--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -59,7 +59,7 @@ body.uomo #pulsante_modello{
 
 /* POPUP IMPOSTAZIONI */
 #tbSigleMeridiani{
-    padding: 20px;
+    padding: 10px 20px;
     background-color: rgba(255,255,255,0.3);
     margin-left: -10px;
     margin-right: -10px;
