--- a/css/popup.css
+++ b/css/popup.css
@@ -12,6 +12,7 @@
   	border-radius:5px;
 	background-color:var(--menu-fondino);
 	box-shadow:0px 0px 5px rgba(0,0,0,0.6);
+	overflow: hidden;
 	z-index:1000001;
 }
 @media (max-width: 400px){
