--- a/css/popup_colori.css
+++ b/css/popup_colori.css
@@ -137,6 +137,10 @@ body:not(.smart) #guida_generica #colSel{
 #t_TOUCH.a_SEL{
 	background-image:url(../img/ico_touchW.png) !important;
 }
+#t_MEDICO,
+#t_OLISTICO{
+	font-size: 12px !important;
+}
 .t_DES{
 	opacity:0.3;
 	cursor:default !important;
